# curso_fastapi

./: README.md  future_dependencies.txt  pyproject.toml
curso_fastapi/: app.py  database.py  models.py  schemas.py  security.py  settings.py
curso_fastapi/routers/: auth.py  tasks.py  users.py
migrations/: env.py
migrations/versions/: 4b4087a6727e_create_tasks_table.py  ba2988dcf2f7_create_users_table.py  f1700235d2c9_alter_table_users_add_colunm_updated_at.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_tasks.py  test_user.py
